# stay.Graphics

./: CMakeLists.txt  Camera.h  README.md  Shader.h  main.cpp
Shaders/: phong_frag.glsl  phong_vert.glsl  simple_frag.glsl  simple_vert.glsl  singleColor_frag.glsl  singleColor_vert.glsl
